Moved posts to pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
       <span class="footer-heading">Contact me</span>
       <ul>
         <li><a href="mailto:{{ site.email }}">
-          <i class="fa fa-envelope-square fa-{{ site.social_badge_size }}"></i>
+          <i class="fa fa-envelope-square fa-lg"></i>
           {{ site.email }}</a></li>
         <li>
           {% if site.github_username %}
@@ -20,13 +20,6 @@
           {% endif %}
         </li>
       </ul>
-    </div>
-
-    <div class="footer-col-2 column">
-    </div>
-
-    <div class="footer-col-3 column">
-      <p class="text">{{ site.description }}</p>
     </div>
 
   </div>
