Weather and LastFm buttons.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,23 @@
       </ul>
     </div>
 
+    <div class="footer-col-2 column">
+      <span class="footer-heading">Misc</span>
+      <ul>
+        <li>
+          <a href="https://www.google.com/search?q=weather+albuquerque" class="btn btn-primary btn-sm">
+            <i class="fa fa-sun-o fa-inverse fa-{{ site.social_badge_size }}"></i>
+          </a>
+          <a href="http://www.last.fm/user/GrokThis" class="btn btn-primary btn-sm">
+            <i class="fa fa-headphones fa-inverse fa-{{ site.social_badge_size }}"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="footer-col-3 column">
+    </div>
+
   </div>
 
 </footer>
