--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,11 +26,11 @@
       <span class="footer-heading">Misc</span>
       <ul>
         <li>
-          <a href="https://www.google.com/search?q=weather+albuquerque" class="btn btn-primary btn-sm">
-            <i class="fa fa-sun-o fa-inverse fa-{{ site.social_badge_size }}"></i>
+          <a href="https://www.google.com/search?q=weather+albuquerque">
+            <i class="fa fa-sun-o fa-{{ site.social_badge_size }}"></i>
           </a>
-          <a href="http://www.last.fm/user/GrokThis" class="btn btn-primary btn-sm">
-            <i class="fa fa-headphones fa-inverse fa-{{ site.social_badge_size }}"></i>
+          <a href="http://www.last.fm/user/GrokThis">
+            <i class="fa fa-lastfm-square fa-{{ site.social_badge_size }}"></i>
           </a>
         </li>
       </ul>
