Photo layout and content updates.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,15 @@
 <footer class="site-footer">
 
   <div class="wrap">
-    <div class="footer-col-2 column">
+    <div class="footer-col-1 column">
       <a href="https://github.com/lnunno/lnunno.github.io">
         View on GitHub <i class="fa fa-github fa-{{ site.social_badge_size }}"></i>
+      </a>
+    </div>
+
+    <div class="footer-col-2 column">
+      <a href="https://www.google.com/search?q=weather+albuquerque">
+          ABQ weather <i class="fa fa-sun-o fa-{{ site.social_badge_size }}"></i>
       </a>
     </div>
 
