--- a/css/music.css
+++ b/css/music.css
@@ -1,5 +1,10 @@
 .music-page .lastfm-chart {
-    width: 800px;
-    height: 800px;
-    margin-left: -25%;
+    width: 500px;
+    height: 500px;
 }
+
+.music-page .chart-container {
+    display: flex;
+    flex-direction: column;
+}
+
