--- a/css/music.css
+++ b/css/music.css
@@ -1,10 +1,17 @@
 .music-page .lastfm-chart {
     width: 500px;
     height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.music-page .chart-lastfm-link {
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 25px;
 }
 
 .music-page .chart-container {
     display: flex;
     flex-direction: column;
-    margin-left: auto;
 }
