--- a/css/main.css
+++ b/css/main.css
@@ -147,11 +147,7 @@ table {
     max-width: 100%;
 }
 
-th {
-    padding: 6px 13px;
-}
-
-td {
+td, th {
     padding: 6px 13px;
     border: 1px solid black;
 }
