--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ table {
 
 td, th {
     padding: 6px 13px !important;
-    border: 1px solid black;
+    border: 1px solid #202B33;
 }
 
 tr:nth-child(even) {
