--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,10 @@ a:visited { color: #205caa; }
   border-top: 5px solid #333;
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
-  background-color: white;
+  
+  /* Dark mode */
+  background-color: rgb(24, 26, 27);
+  color: rgb(200, 195, 188);
 }
 
 .site-title,
