--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,7 @@ a:visited { color: #205caa; }
 /* Site header */
 
 .site-header {
-  border-top: 5px solid #333;
-  border-bottom: 1px solid #e8e8e8;
+  border-bottom: 1px solid #394B59;
   min-height: 56px;
   
   /* Dark mode */
@@ -63,7 +62,8 @@ a:visited { color: #205caa; }
 .site-title:hover,
 .site-title:visited {
   display: block;
-  color: #333;
+  /* Dark mode */
+  color: rgb(200, 195, 188);
   font-size: 26px;
   letter-spacing: -1px;
   float: left;
@@ -81,15 +81,16 @@ a:visited { color: #205caa; }
 
 .site-nav .page-link {
   margin-left: 20px;
-  color: #727272;
+  /* Dark mode */
+  color: rgb(200, 195, 188);
   letter-spacing: -.5px;
 }
 
 /* Site footer */
 
 .site-footer {
-  border-top: 1px solid #e8e8e8;
-  padding: 30px 0;
+  border-top: 1px solid #394B59;
+  padding: 10px 0;
 }
 
 .footer-heading {
