--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html, body {
     height: 100%; 
     
     /* Dark mode */
-    background-color: rgb(24, 26, 27);
+    background-color: rgb(24, 26, 27) !important;
     color: rgb(200, 195, 188);
 }
 
