--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,17 @@
   padding: 0;
 }
 
+:root {
+ --background-color: rgb(24, 26, 27);
+ --text-color: rgb(200, 195, 188);
+}
+
 html, body { 
     height: 100%; 
     
     /* Dark mode */
-    background-color: rgb(24, 26, 27) !important;
-    color: rgb(200, 195, 188);
+    background-color: var(--background-color) !important;
+    color: var(--text-color);
 }
 
 body {
@@ -21,8 +26,8 @@ body {
   font-weight: 300;
       
   /* Dark mode */
-  background-color: rgb(24, 26, 27);
-  color: rgb(200, 195, 188);
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
@@ -54,8 +59,8 @@ a:visited { color: #205caa; }
   min-height: 56px;
   
   /* Dark mode */
-  background-color: rgb(24, 26, 27);
-  color: rgb(200, 195, 188);
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 .site-title,
@@ -152,8 +157,8 @@ a:visited { color: #205caa; }
   padding: 30px 0;
   
   /* Dark mode */
-  background-color: rgb(24, 26, 27);
-  color: rgb(200, 195, 188);
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 table {
