Blueprint colors for background and text

--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,8 @@
 }
 
 :root {
- --background-color: rgb(24, 26, 27);
- --text-color: rgb(200, 195, 188);
+ --background-color: #10161A;
+ --text-color: #CED9E0;
 }
 
 html, body { 
